<!--
  ~ MIT License
  ~
  ~ Copyright (c) [2016] [Maia Grotepass]
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="action_settings">Settings</string>
    <string name="geofence_not_available">Geofence not available.</string>
    <string name="geofence_too_many_geofences">Too many Geofences.</string>
    <string name="geofence_too_many_pending_intents">Too many pending intents.</string>
    <string name="unknown_geofence_error">Unknown geofence error.</string>
    <string name="not_connected">Not connected</string>
    <string name="in_vehicle">in vehicle</string>
    <string name="on_bicycle">on bicycle</string>
    <string name="on_foot">on foot</string>
    <string name="running">running</string>
    <string name="still">still</string>
    <string name="tilting">tilting</string>
    <string name="unknown">unknown</string>
    <string name="walking">walking</string>
    <string name="unidentifiable_activity">unidentifiable activity: %1$d</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">unknown transition</string>
    <string name="geofence_transition_invalid_type">geofence transition invalid type: %1$d</string>
    <string name="add_geofences">Refresh</string>
    <string name="remove_geofences">Clear</string>
    <string name="title">Title</string>
    <string name="radius_in_m">Radius in m</string>
    <string name="latitude_decimal">latitude in decimal</string>
    <string name="longitude_decimal">longitude in decimal</string>
    <string name="current_location">current location</string>
    <string name="OK">ok</string>
    <string name="error_api_build">error accessing google api</string>
    <string name="geofences_updated">Geofences updated</string>
    <string name="permission_rationale">This app is testing geofences and needs location permission to do this.</string>
    <string name="nothing_to_remove">Nothing to remove</string>
    <string name="test">Test</string>
    <string name="action_add">Add</string>

</resources>
