<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/grid3"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minTextWidth">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/radius_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minTextWidth">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radius_in_m"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minTextWidth">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_decimal"
            android:inputType="numberDecimal|numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/long_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/minTextWidth">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/longtitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_decimal"
            android:inputType="numberDecimal|numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="or" />

    <Button
        android:id="@+id/current_location_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_location"/>

    <Button
        android:id="@+id/add_geo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OK" />

</LinearLayout>
    </layout>